--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
     <header></header>
     <nav></nav>
     <section>
+      <h1>Inicio</h1>
+      <p>{{1+1}}</p>
       <div id="miApp">
-        
+        <p>{{1+1}}</p>
+        <p>{{true}}</p>
+        <h4>nombre</h4>
+        <h4>{{nombre}}</h4>
+        <h4>apellido</h4>
+        <h4>{{apellido}}</h4>
+        <h4>mensaje</h4>
+        <h4>{{mensaje}}</h4>
+        <p>{{true?'Activo':'Inactivo'}}</p>
+        <button v-on:click="cambiarNombre">Cambiar Nombre</button>
+        <button v-on:click="cambiarApellido">Cambiar Apellido</button>
+
       </div>
+      <h1>Fin</h1>
     </section>
     <footer></footer>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
