--- a/html/directivaVFor.html
+++ b/html/directivaVFor.html
@@ -1,20 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
     <nav></nav>
     <section>
-     <div id="miApp2"></div>
+      <div id="miApp2">
+        <h4 >Estudiantes UCE</h4>
+        <input type="text" v-model="nombre" v-on:keypress.enter="agregarEstudiante2">
+        
+        <h1>{{nombre}}</h1>
+        <hr>
+        <h3>Lista Estudiantes</h3>
+        <ul>
+          <li v-for="({nombre,apellido},index) in miArreglo">
+            <span>{{index+1}}--{{nombre}}</span>
+            <blockquote>{{apellido}}</blockquote>
+          </li>
+        </ul>
+        <!-- <table>
+          <tr>
+            <th></th>
+          </tr>
+          <tr v-for="({nombre,apellido},index) in miArreglo">
+            <td>{{index}}</td>
+            <td>{{nombre}}</td>
+            <td>{{apellido}}</td>
+          </tr>
+        </table> -->
+        <!-- <ul>
+          
+            <li>{{miArreglo[0]}}</li>
+            <li>{{miArreglo[0]}}</li>
+            <li>{{miArreglo[1]}}</li>
+            <li>{{miArreglo[2]}}</li>
+            <li>{{miArreglo[3]}}</li>
+            <li>{{miArreglo[4]}}</li>
+            <li>{{miArreglo[5]}}</li>
+            <li>{{miArreglo[6]}}</li>
+            <li>{{miArreglo[7]}}</li>
+            <li>{{miArreglo[8]}}</li>
+            <li>{{miArreglo[9]}}</li>
+        </ul> -->
+      </div>
     </section>
     <footer></footer>
     <script src="../js/vFor.js"></script>
-</body>
+  </body>
 </html>
